objects/DMAPP__DM_Coach_Rule__c.object
<CustomObject>
    <description>ADMIN ONLY DATA CONFIG

This object is responsible for the maintenance of the Coach Rules. These can be edited through the Dealmaker Admin App.</description>
    <fields>
        <fullName>DMAPP__Advice_Template__c</fullName>
        <label>Advice Template</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DMAPP__Available__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Available</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DMAPP__DealmakerID__c</fullName>
        <description>An external ID used for Dealmaker</description>
        <externalId>true</externalId>
        <label>DealmakerID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>DMAPP__Description__c</fullName>
        <label>Description</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DMAPP__Enabled__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DMAPP__Order_Number__c</fullName>
        <label>Order Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DMAPP__Readonly__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Readonly</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DMAPP__Rule__c</fullName>
        <label>Rule</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Coach Rule</label>
    <listViews>
        <fullName>DMAPP__All</fullName>
        <columns>DMAPP__Rule__c</columns>
        <columns>NAME</columns>
        <columns>DMAPP__Advice_Template__c</columns>
        <columns>DMAPP__Description__c</columns>
        <columns>DMAPP__Enabled__c</columns>
        <columns>DMAPP__Order_Number__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Coach Rule Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Coach Rules</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>